# ClaudeServer

./: .gitignore  README.md  Run.cmd  data.db  info.json  run.ps1
.github/workflows/: build-client.yml
client/: Run.cmd  app.go  build.bat  build.ps1  compile-notice.js  config.go  config.json  go.mod  main.go  notice.md  storage.go  version.go  wails.json
client/frontend/: package.json
client/frontend/src/: App.vue  style.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: commands.rs  database.rs  hwid.rs  lib.rs  main.rs  websocket.rs
client/src-vue/mobile/: capacitor.config.ts  index.html  package.json  vite.config.ts
client/src-vue/pc/: package.json  tailwind.config.js  (+1 more)
client/src-wails/: Taskfile.yml  go.mod  go.sum  main.go  wails.json
server/: changes.go  claude.go  claude_additions.go  config.go  database.go  debug_utils.go  dialogue.go  dialogue_handlers.go  go.mod  handlers.go  main.go  mcp.go  mcp_api.go  mcp_bootstrap.go  mcp_client.go  mcp_diagnostic.go  mcp_handlers.go  mcp_session_manager.go  mcp_tools.go  mcp_websocket.go  monitor.go  remote_mcp.go  request_limiter.go  router.go
server/src/: database.sql
src/: changes.yaml  config-template.yaml  database.sql  重建数据.bat
static/: gui.html
static/apis/: apis.css  apis.html
static/changes/: changes.css  changes.js
static/dashboard/: dashboard.html
static/dialogues/: dialogues.css
static/history/: history.css  history.html  history.js
static/shared/: common.css  common.js
(+66 files in other folders)
